# ExercicioemPython-bootcamp

./: Desafio_bicicletaclasses.py  Exerciciobancodedados.py  banco.db  meu_banco.sqlite  pyproject.toml
