[tool.poetry]
name = "exercicioempython bootcamp"
version = "0.1.0"
description = ""
authors = ["Robson de farias <111597373+robsonfarias2963@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
